implement dashboard feature